[package]
name = "real"
version = "0.1.2"
edition = "2024"
description = "A lightweight library for extracting the real client IP address from HTTP requests, supporting common forwarding headers such as X-Real-IP and X-Forwarded-For, with a fallback to the remote socket address."
license = "MIT"
repository = "https://github.com/canmi21/real"
readme = "README.md"
keywords = ["ip", "http", "proxy", "forwarded", "real-ip"]
categories = ["web-programming", "network-programming"]

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum"]

[dependencies]
thiserror = "1"
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
async-trait = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tracing-subscriber = "0.3"
serde_json = "1"

[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:async-trait", "dep:futures-util"]